Suggested improvements (#8)
* Suggested improvements

* Use specified nested set order