@@ -99,17 +99,15 @@ import com.google.devtools.build.skyframe.SkyframeLookupResult;
 import com.google.protobuf.ByteString;
 import java.io.IOException;
 import java.io.InputStream;
-import java.nio.charset.Charset;
 import java.io.UncheckedIOException;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.Iterator;
-import java.util.Objects;
 import java.util.List;
 import java.util.Map;
-import java.util.HashMap;
+import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
 import java.util.function.Predicate;
@@ -184,7 +182,7 @@ public class CppCompileAction extends AbstractAction implements IncludeScannable
    */
   private Set<DerivedArtifact> usedModules;
 
-  private Set<DerivedArtifact> usedCpp20Modules;
+  private Set<Artifact> usedCpp20Modules;
 
   private boolean inputsDiscovered = false;
 
@@ -211,7 +209,7 @@ public class CppCompileAction extends AbstractAction implements IncludeScannable
   private ParamFileActionInput paramFileActionInput;
   @Nullable private final PathFragment paramFilePath;
 
-  private final NestedSet<Artifact.DerivedArtifact> moduleFiles;
+  private final NestedSet<Artifact> moduleFiles;
   private final Artifact modmapInputFile;
 
   /**
@@ -270,7 +268,7 @@ public class CppCompileAction extends AbstractAction implements IncludeScannable
       ImmutableList<PathFragment> builtInIncludeDirectories,
       @Nullable Artifact grepIncludes,
       ImmutableList<Artifact> additionalOutputs,
-      NestedSet<Artifact.DerivedArtifact> moduleFiles,
+      NestedSet<Artifact> moduleFiles,
       Artifact modmapInputFile) {
     super(
         owner,
@@ -371,7 +369,7 @@ public class CppCompileAction extends AbstractAction implements IncludeScannable
       FeatureConfiguration featureConfiguration,
       ImmutableList<PathFragment> builtInIncludeDirectories,
       @Nullable PathFragment paramFilePath,
-      NestedSet<DerivedArtifact> moduleFiles,
+      NestedSet<Artifact> moduleFiles,
       Artifact modmapInputFile) {
     super(owner, mandatoryInputs, rawOutputs);
     this.gcnoFile = gcnoFile;
@@ -662,9 +660,9 @@ public class CppCompileAction extends AbstractAction implements IncludeScannable
   @Override
   public NestedSet<Artifact> discoverInputs(ActionExecutionContext actionExecutionContext)
       throws ActionExecutionException, InterruptedException {
-    if (!isCpp20ModuleCompilationAction(actionName)) {
-      Preconditions.checkArgument(!sourceFile.isFileType(CppFileTypes.CPP_MODULE));
-    }
+    Preconditions.checkArgument(
+        !sourceFile.isFileType(CppFileTypes.CPP_MODULE)
+            || isCpp20ModuleCompilationAction(actionName));
 
     if (additionalInputs == null) {
       List<String> options;
@@ -748,7 +746,7 @@ public class CppCompileAction extends AbstractAction implements IncludeScannable
             .addTransitive(requiredModules.transitivelyUsed())
             .build();
     if (getPrimaryOutput().isFileType(CppFileTypes.CPP_MODULE)
-            && !isCpp20ModuleCompilationAction(actionName)) {
+        && !isCpp20ModuleCompilationAction(actionName)) {
       this.discoveredModules = requiredModules.transitivelyUsed();
     }
     usedModules = null;
@@ -805,7 +803,7 @@ public class CppCompileAction extends AbstractAction implements IncludeScannable
 
   /** Returns the path where the compiler should put the discovered dependency information. */
   public Artifact getDotdFile() {
-    return dotdFile;
+    return compileCommandLine.getDotdFile();
   }
 
   public CcCompilationContext getCcCompilationContext() {
@@ -1327,14 +1325,12 @@ public class CppCompileAction extends AbstractAction implements IncludeScannable
 
   @Override
   protected String getRawProgressMessage() {
-    switch (actionName) {
-      case CppActionNames.CPP_HEADER_ANALYSIS:
-        return "Header analysis for " + getSourceFile().prettyPrint();
-      case CppActionNames.CPP_MODULE_DEPS_SCANNING:
-        return "Deps scanning for " + getSourceFile().prettyPrint();
-      default:
-        return "Compiling " + getSourceFile().prettyPrint();
-    }
+    return switch (actionName) {
+          case CppActionNames.CPP_HEADER_ANALYSIS -> "Header analysis for ";
+          case CppActionNames.CPP_MODULE_DEPS_SCANNING -> "Deps scanning for ";
+          default -> "Compiling ";
+        }
+        + getSourceFile().prettyPrint();
   }
 
   /** Returns explicitly listed header files. */
@@ -1667,47 +1663,39 @@ public class CppCompileAction extends AbstractAction implements IncludeScannable
     return featureConfiguration.isEnabled(CppRuleClasses.PARSE_SHOWINCLUDES);
   }
 
-  /**
-   * Dynamic dependencies handle for C++20 Modules.
-   */
-  private Set<DerivedArtifact> computeUsedCpp20Modules(
-      ActionExecutionContext actionExecutionContext)
-      throws ActionExecutionException, InterruptedException {
-    // if cpp20_module not enable, skip
+  /** Dynamically compute the dependencies of a compilation using C++20 modules. */
+  private ImmutableSet<Artifact> computeUsedCpp20Modules(
+      ActionExecutionContext actionExecutionContext) throws ActionExecutionException {
     if (!featureConfiguration.isEnabled(CppRuleClasses.CPP_MODULES)) {
-      return Set.of();
+      return ImmutableSet.of();
     }
-    // c++-module-deps-scanning use source file and header files only
-    if (Objects.equals(CppActionNames.CPP_MODULE_DEPS_SCANNING, actionName)) {
-      return Set.of();
+    // Module dependency scanning only needs source and header files.
+    if (actionName.equals(CppActionNames.CPP_MODULE_DEPS_SCANNING)) {
+      return ImmutableSet.of();
     }
     if (!isCpp20ModuleCompilationAction(actionName)
         && !CppFileTypes.CPP_SOURCE.matches(sourceFile.getExecPath())) {
-      return Set.of();
+      return ImmutableSet.of();
     }
-    Set<DerivedArtifact> usedModules = new HashSet<>();
-    ImmutableList<String> modulePathList;
+    ImmutableSet<String> usedModulePaths;
     try {
-      modulePathList =
-          FileSystemUtils.readLines(
-              actionExecutionContext.getInputPath(modmapInputFile), Charset.defaultCharset());
+      // Read the file paths as raw bytes, which matches Bazel's internal encoding of path strings
+      // (see StringEncoding).
+      usedModulePaths =
+          ImmutableSet.copyOf(
+              FileSystemUtils.readLinesAsLatin1(
+                  actionExecutionContext.getInputPath(modmapInputFile)));
     } catch (IOException e) {
       String message =
           String.format("failed to read modmap input: %s", modmapInputFile.getExecPathString());
       DetailedExitCode code = createDetailedExitCode(message, Code.MODMAP_INPUT_FILE_READ_FAILURE);
-      throw new ActionExecutionException(message, this, /*catastrophe=*/ false, code);
+      throw new ActionExecutionException(message, this, /* catastrophe= */ false, code);
     }
-    var moduleFileSet = moduleFiles.toSet();
-    Map<String, Artifact.DerivedArtifact> moduleFileMap = new HashMap<>(moduleFileSet.size());
-    for (DerivedArtifact moduleFile : moduleFileSet) {
-      moduleFileMap.put(moduleFile.getExecPathString(), moduleFile);
-    }
-    for (String modulePath : modulePathList) {
-      if (moduleFileMap.containsKey(modulePath)) {
-        usedModules.add(moduleFileMap.get(modulePath));
-      }
-    }
-    return usedModules;
+    // All module files referenced in the modmap input file are expected to be known modules. We
+    // delegate error reporting to the compiler by silently skipping over unknown files.
+    return moduleFiles.toList().stream()
+        .filter(moduleFile -> usedModulePaths.contains(moduleFile.getExecPathString()))
+        .collect(toImmutableSet());
   }
 
   Spawn createSpawn(Path execRoot, Map<String, String> clientEnv, PathMapper pathMapper)
@@ -2109,7 +2097,7 @@ public class CppCompileAction extends AbstractAction implements IncludeScannable
   }
 
   public static boolean isCpp20ModuleCompilationAction(String actionName) {
-    return CppActionNames.CPP20_MODULE_COMPILE.equals(actionName)
-        || CppActionNames.CPP20_MODULE_CODEGEN.equals(actionName);
+    return actionName.equals(CppActionNames.CPP20_MODULE_COMPILE)
+        || actionName.equals(CppActionNames.CPP20_MODULE_CODEGEN);
   }
 }
